hphp/hack/test/typecheck/upcast_experimental.php
<?hh

function f(int $x) : void {
  $x upcast num;
}
